--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     function jump_to_doc(){
         alert("还没写好...别急")
     }
+    function jump_to_down(){
+        window.open("https://github.com/Searchstars/StarChatWebsite/releases/download/cmtv2/StarChat-CMTV2-Win32-net7.0-windows10.0.19041.0.zip")
+    }
 </script>
 <html>
     <body class="bodyclass" style="width:auto;height:auto;background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0, 0.4)), url('img/bg.png');background-repeat:no-repeat;background-size:100% 100%;background-attachment: fixed;max-width: 100%;">
@@ -28,7 +31,7 @@
             cursor: pointer;
             font-family: LatoRegular;
             border-radius: 10px;"
-        >下载 StarChat X 兼容性测试版</button></div>
+        onclick="jump_to_down()">下载 StarChat X 兼容性测试版</button></div>
         <div style="animation:fadenum 5s 1;top:30%;position: relative;margin: 0 auto;text-align: center;"><button style="
             border: none;
             color: white;
@@ -46,11 +49,11 @@
         <div style="animation:fadenum 2s 1;top:60%;position: relative;margin: 0 auto;text-align: center;"><img src="img/down_arrow.png" style="width: 37.5px;height: 35.5px;"/></div>
         <div style="font-family: LatoBold;color: white;font-size: 24;top:80%;position: relative;margin: 0 auto;text-align: center;">一对一 好友私聊</div>
         <div style="font-family: LatoBold;color: white;font-size: 16;top:82%;position: relative;margin: 0 auto;text-align: center;">使用熟悉的语言，熟悉的方式</div>
-        <div style="animation:fadenum 2s 1;top:85%;position: relative;margin: 0 auto;text-align: center;"><img src="img/chatwindow_show_friendchat.png" style="border-radius: 15px;"/></div>
+        <div style="animation:fadenum 2s 1;top:85%;position: relative;margin: 0 auto;text-align: center;"><img src="img/chatwindow_show_friendchat.png" style="border-radius: 15px;opacity: 0.8;"/></div>
         <div style="animation:fadenum 2s 1;top:86%;position: relative;margin: 0 auto;text-align: center; width: 200px"></div>   
         <div style="font-family: LatoBold;color: white;font-size: 24;top:120%;position: relative;margin: 0 auto;text-align: center;">百人开团 群组混战</div>
         <div style="font-family: LatoBold;color: white;font-size: 16;top:122%;position: relative;margin: 0 auto;text-align: center;">文字？图片？动图？emoji？视频？语音？统统收入囊中！</div>
-        <div style="animation:fadenum 2s 1;top:125%;position: relative;margin: 0 auto;text-align: center;"><img src="img/chatwindow_show_groupchat.png" style="border-radius: 15px;"/></div>
+        <div style="animation:fadenum 2s 1;top:125%;position: relative;margin: 0 auto;text-align: center;"><img src="img/chatwindow_show_groupchat.png" style="border-radius: 15px;opacity: 0.8;"/></div>
         <div style="animation:fadenum 2s 1;top:135%;position: relative;margin: 0 auto;text-align: center;"><img src="img/100px_blank.png" style="border-radius: 15px;"/></div>
         <div style="font-family: LatoRegular;color: white;font-size: 16;top:128%;position: relative;margin: 0 auto;text-align: center;">WebSite Made By Searchstars / StarChat development team presents 2023</div>
         <div style="font-family: LatoRegular;color: white;font-size: 10;top:129%;position: relative;margin: 0 auto;text-align: center;">Background image create by stable-diffusion (Anything-v4.5 cpkt and vae.pt + DPM++ 2S a Karras + Sampling steps 60 + CFG Scale 7 + Prompt="masterpiece, best quality, scenery, air, night, sky, prevalent, illusion" + Negative Prompt="nsfw, buildings, lands, ground")</div>
